patches/core_test_with_patch.txt
     Locking 1 package to latest compatible version
      Adding stellar-xdr v20.1.0 (/workspaces/SkillSync_Contract/patches/stellar-xdr)
   Compiling serde v1.0.192
   Compiling stellar-xdr v20.1.0 (/workspaces/SkillSync_Contract/patches/stellar-xdr)
   Compiling base64 v0.13.1
   Compiling soroban-spec v20.5.0
error[E0432]: unresolved import `stellar_xdr::curr`
 --> /home/codespace/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/soroban-spec-20.5.0/src/read.rs:3:5
  |
3 | use stellar_xdr::curr as stellar_xdr;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no `curr` in the root

For more information about this error, try `rustc --explain E0432`.
error: could not compile `soroban-spec` (lib) due to 1 previous error
warning: build failed, waiting for other jobs to finish...
